Added Toggle Functionality for Employees
